--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 
 
 <body>
-
+    <div>
+        <h1>Sten sax påse</h1>
+    </div>
+    <div class="buttons">
+        <button class="rock">STEN</button>
+        <button class="scissors">SAX</button>
+        <button class="paper">PÅSE</button>
+    </div>
 </body>
 
 </html>
