--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
       <button class="scissors">SAX</button>
       <button class="paper">PÅSE</button>
     </div>
+    <div>
+      <h2></h2>
+    </div>
   </body>
 </html>
