--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
-  </head>
 
-  <body>
-    <div>
-      <h1>Sten sax påse</h1>
-    </div>
-    <div class="buttons">
-      <button class="rock">STEN</button>
-      <button class="scissors">SAX</button>
-      <button class="paper">PÅSE</button>
-    </div>
-    <div>
-      <h2></h2>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sten Sax Påse</title>
+  <!--link to style.css & script.js-->
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
+</head>
+
+<body>
+
+  <div>
+    <h1>Sten sax påse</h1>
+  </div>
+
+  <div class="buttons">
+    <button class="rock">STEN</button>
+    <button class="scissors">SAX</button>
+    <button class="paper">PÅSE</button>
+  </div>
+
+  <div>
+    <h2>Dators val: <span id="ComputerplayerDisplay"></span></h2>
+  </div>
+
+</body>
+
 </html>
